--- a/build.xml
+++ b/build.xml
@@ -116,6 +116,8 @@
 		</copy>
 	</target>
 
+	<path id="tools.jar" location="${java.home}/../lib/tools.jar"/>
+
 	<macrodef name="compile">
 		<attribute name="srcdir"/>
 		<sequential>
@@ -132,6 +134,7 @@
 					<fileset dir="mac/applejavaextensions">
 						<include name="AppleJavaExtensions.jar"/>
 					</fileset>
+					<path refid="tools.jar"/>
 				</classpath>
 			</javac>
 			<copy todir="${build}/classes">
@@ -152,6 +155,7 @@
 			<include name="com/leafdigital/ui/api/UICallback.java"/>
 			<include name="com/leafdigital/ui/api/UIHandler.java"/>
 			<include name="com/leafdigital/ui/api/UIAction.java"/>
+			<classpath refid="tools.jar"/>
 		</javac>
 		<mkdir dir="${build}/uicheckerjar"/>
 		<jar jarfile="${build}/uichecker/uichecker.jar"
